--- a/public/home/css/top.css
+++ b/public/home/css/top.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -5,32 +6,75 @@
 ul {
   list-style: none;
 }
-.top_header {
+#header {
   width: 100%;
-  height: 140px;
-  background-color: white;
+  height: 190px;
+  background-color: aliceblue;
+  z-index: 1;
 }
-.top_header .top_header_box {
-  height: 100%;
-  width: 1400px;
-  margin: auto;
-  background-color: blue;
+#header .header {
+  width: 1358px;
+  height: 78px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
-.top_header .top_header_box .logo {
-  float: left;
-  padding-top: 5px;
+#header .header .header-nav {
+  width: 100%;
+  height: 90px;
+  display: flex;
 }
-.top_header .top_header_box .top_header_title {
-  float: left;
+#header .header .header-nav .logo {
+  padding-top: 15px;
+  cursor: pointer;
 }
-.top_header .top_header_box .top_header_title li {
-  display: inline-block;
-  width: 70px;
-  height: 70px;
-  background-color: yellowgreen;
+#header .header .header-nav .list-nav {
+  width: 450px;
+  height: 90px;
+  display: flex;
+  background-color: #fff;
+}
+#header .header .header-nav .list-nav li {
+  width: 90px;
+  height: 90px;
+  background-color: blanchedalmond;
   text-align: center;
-  line-height: 70px;
+  border: 1px solid green;
+  cursor: pointer;
 }
-.top_header .top_header_box .select {
-  float: left;
+#header .header .header-nav .list-nav li p {
+  font-size: 14px;
+  color: black;
+  margin-top: 25px;
+}
+#header .header .header-nav .select {
+  width: 160px ;
+  height: 25px;
+  margin-top: 25px;
+  margin-left: 10px;
+}
+#header .header .header-nav span {
+  margin-left: 20px;
+  margin-top: 25px;
+  font-size: 14px;
+}
+#header .header .header-nav #select {
+  width: 90px;
+  height: 30px;
+  background-color: greenyellow;
+  margin-top: 25px;
+  margin-left: 25px;
+}
+#header .header .header-nav #select2 {
+  width: 90px;
+  height: 30px;
+  background-color: white;
+  margin-top: 25px;
+  margin-left: 10px;
+}
+#header .header .header-dao {
+  width: 100%;
+  height: 90px;
+  background-color: yellow;
 }
