--- a/public/home/css/top.less
+++ b/public/home/css/top.less
@@ -1,37 +1,103 @@
- *{
+@charset "UTF-8";
+*{
    margin: 0;
    padding: 0;
  }
  ul{list-style: none;}
- .top_header{
-      width: 100%;
-      height: 140px;
-      background-color: white;
-      .top_header_box{
-        height: 100%;
-        width: 1400px;
-        margin: auto;
-        background-color: blue;
-        .logo{
-         float: left;
-         padding-top: 5px;
+
+ //头部
+ #header{
+   width: 100%;
+   height: 190px;
+   background-color: aliceblue;
+   z-index: 1;
+
+   //网页自适应居中
+   .header{
+     width: 1358px;
+     height: 78px;
+     margin: 0 auto;
+    //  开启弹性盒子
+     display: flex;
+    //  两端
+     justify-content: space-between;
+     flex-wrap: wrap;
+
+     //导航
+     .header-nav{
+       width: 100%;
+       height: 90px;
+       display: flex;
+
+       //图片对齐
+       .logo{
+         padding-top: 15px; 
+        //  小手
+         cursor: pointer;
+        
+        
+    
         }
-        .top_header_title{
-          float: left;
-           li{
-            display: inline-block;
-            width: 70px;
-            height: 70px;
-            background-color: yellowgreen;
-            text-align: center;
-            line-height: 70px;
+        // 导航文字内容
+        .list-nav{        
+          width: 450px;
+          height: 90px;
+          display: flex;
+          background-color: #fff;  
+         
+
+        li{
+          width: 90px;
+          height: 90px;
+          background-color: blanchedalmond;
+          text-align: center;
+          border: 1px solid green;
+          cursor: pointer;
+          p{
+            font-size: 14px;
+            color: black;
+            margin-top: 25px;
+            
           }
-  
         }
-        .select{
-          float: left;
-        }
+
+
+       }
+       //搜索框
+       .select{
+         width:160px ;
+         height: 25px;
+         margin-top: 25px;
+         margin-left: 10px;
+       }
+      span{
+        margin-left: 20px;
+        margin-top: 25px;
+        font-size: 14px;
       }
-      
+      #select{
+        width: 90px;
+        height: 30px;
+        background-color: greenyellow;
+        margin-top: 25px;
+        margin-left: 25px;
+      }
+      #select2{
+        width: 90px;
+        height: 30px;
+        background-color: white;
+        margin-top: 25px;
+        margin-left: 10px;
+      }
+
+     }
+     .header-dao{
+       width: 100%;
+       height: 90px;
+       background-color: yellow;
+     }
+
+   }
 
  }
+ 
