后台管理接口和首页页脚

--- a/public/home/css/top.less
+++ b/public/home/css/top.less
@@ -48,9 +48,9 @@
         li{
           width: 90px;
           height: 90px;
-          background-color: blanchedalmond;
+          background-color: aliceblue;
           text-align: center;
-          border: 1px solid green;
+          // border: 1px solid green;
           cursor: pointer;
           p{
             font-size: 14px;
