--- a/public/home/css/footer.css
+++ b/public/home/css/footer.css
@@ -12,8 +12,143 @@ ul {
   background-color: #333333;
 }
 #footer .footer-row1 {
-  width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
   height: 220px;
   margin: 50px auto;
   background-color: yellowgreen;
+}
+#footer .footer-row1 .row-left {
+  width: 380px;
+  height: 200px;
+  background-color: blue;
+  border: 1px solid black;
+  float: left;
+  font-size: 12px;
+}
+#footer .footer-row1 .row-left ul {
+  width: 360px;
+  height: 100px;
+  border: 1px solid black;
+}
+#footer .footer-row1 .row-left ul .ico_pc {
+  margin: 10px auto;
+  height: 48px;
+  width: 48px ;
+  background-image: url(../img/footer.png);
+  background-position: -2px 0;
+}
+#footer .footer-row1 .row-left ul .ico_mac {
+  margin: 10px auto;
+  height: 48px;
+  width: 46px ;
+  background-image: url(../img/footer.png);
+  background-position: -92px 0;
+}
+#footer .footer-row1 .row-left ul .ico_and {
+  margin: 10px auto;
+  height: 48px;
+  width: 46px ;
+  background-image: url(../img/footer.png);
+  background-position: -190px 0;
+}
+#footer .footer-row1 .row-left ul .ico_iph {
+  margin: 10px auto;
+  height: 48px;
+  width: 46px ;
+  background-image: url(../img/footer.png);
+  background-position: -190px 0;
+}
+#footer .footer-row1 .row-left ul li {
+  width: 85px;
+  height: 100px;
+  text-align: center;
+  float: left;
+}
+#footer .footer-row1 .row-midde {
+  width: 380px;
+  height: 200px;
+  border: 1px solid black;
+  float: left;
+  font-size: 12px;
+}
+#footer .footer-row1 .row-midde ul {
+  width: 360px;
+  height: 100px;
+  border: 1px solid black;
+}
+#footer .footer-row1 .row-midde ul .ico_pc {
+  margin: 10px auto;
+  height: 48px;
+  width: 48px ;
+  background-image: url(../img/footer.png);
+  background-position: -279px 0;
+}
+#footer .footer-row1 .row-midde ul .ico_mac {
+  margin: 10px auto;
+  height: 48px;
+  width: 46px ;
+  background-image: url(../img/footer.png);
+  background-position: -463px 0;
+}
+#footer .footer-row1 .row-midde ul .ico_and {
+  margin: 10px auto;
+  height: 48px;
+  width: 46px ;
+  background-image: url(../img/footer.png);
+  background-position: -563px 0;
+}
+#footer .footer-row1 .row-midde ul .ico_iph {
+  margin: 10px auto;
+  height: 48px;
+  width: 46px ;
+  background-image: url(../img/footer.png);
+  background-position: -650px 0;
+}
+#footer .footer-row1 .row-midde ul li {
+  width: 85px;
+  height: 100px;
+  text-align: center;
+  float: left;
+}
+#footer .footer-row1 .row-right {
+  width: 380px;
+  height: 200px;
+  border: 1px solid black;
+  float: left;
+  font-size: 12px;
+}
+#footer .footer-row1 .row-right ul {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 200px;
+  border: 1px solid black;
+}
+#footer .footer-row1 .row-right ul li {
+  width: 120px;
+}
+#footer .footer-row2 {
+  width: 80%;
+  height: 200px;
+  background-color: brown;
+  margin: 10px auto;
+}
+#footer .footer-row2 .row2-left {
+  width: 500px;
+  height: 200px;
+  border: 1px solid black;
+  float: left;
+}
+#footer .footer-row2 .row2-mid {
+  width: 500px;
+  height: 200px;
+  border: 1px solid black;
+  float: left;
+}
+#footer .footer-row3 {
+  width: 100%;
+  height: 200px;
+  text-align: center;
 }
