--- a/public/home/css/footer.less
+++ b/public/home/css/footer.less
@@ -11,9 +11,157 @@ ul{list-style: none;}
   background-color: #333333;
 
   .footer-row1{
-    width: 1200px;
+    display: flex;
+    // flex-wrap: nowrap;
+    // align-content: space-between;
+    //   两端对齐 中间留有空隙
+    justify-content: space-between;
+    width: 80%;
     height: 220px;
     margin: 50px auto;
     background-color: yellowgreen;
+    .row-left{
+      width: 380px;
+      height: 200px;
+      background-color: blue;
+      border: 1px solid black;
+      float: left;
+      font-size: 12px;
+      ul{
+        width: 360px;
+        height: 100px;
+        border: 1px solid black;
+        .ico_pc{
+          margin: 10px auto;
+          height: 48px;
+          width: 48px ;
+          background-image: url(../img/footer.png);
+          background-position: -2px 0;
+        }
+        
+        .ico_mac{
+          margin: 10px auto;
+          height: 48px;
+          width: 46px ;
+          background-image: url(../img/footer.png);
+          background-position: -92px 0;
+        }
+        .ico_and{
+          margin: 10px auto;
+          height: 48px;
+          width: 46px ;
+          background-image: url(../img/footer.png);
+          background-position: -190px 0;
+        }
+        .ico_iph{
+          margin: 10px auto;
+          height: 48px;
+          width: 46px ;
+          background-image: url(../img/footer.png);
+          background-position: -190px 0;
+        }
+        li{
+          width: 85px;
+          height: 100px;
+          text-align: center;
+          float: left;
+          
+         
+        }
+      }
+      
+      
+    }
+
+    .row-midde{ 
+      width: 380px;
+      height: 200px;
+      border: 1px solid black;
+      float: left;
+      font-size: 12px;
+      ul{
+        width: 360px;
+        height: 100px;
+        border: 1px solid black;
+        .ico_pc{
+          margin: 10px auto;
+          height: 48px;
+          width: 48px ;
+          background-image: url(../img/footer.png);
+          background-position: -279px 0;
+        }
+        
+        .ico_mac{
+          margin: 10px auto;
+          height: 48px;
+          width: 46px ;
+          background-image: url(../img/footer.png);
+          background-position: -463px 0;
+        }
+        .ico_and{
+          margin: 10px auto;
+          height: 48px;
+          width: 46px ;
+          background-image: url(../img/footer.png);
+          background-position: -563px 0;
+        }
+        .ico_iph{
+          margin: 10px auto;
+          height: 48px;
+          width: 46px ;
+          background-image: url(../img/footer.png);
+          background-position: -650px 0;
+        }
+        li{
+          width: 85px;
+          height: 100px;
+          text-align: center;
+          float: left;
+          
+         
+        }
+      }
+
+    }
+    .row-right{
+      width: 380px;
+      height: 200px;
+      border: 1px solid black;
+      float: left;
+      font-size: 12px;
+      ul{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 200px;
+        border: 1px solid black;
+        li{
+          width: 120px;
+        }
+      }
+    }
+  }
+  .footer-row2{
+    width: 80%;
+    height: 200px;
+    background-color: brown;
+    margin: 10px auto;
+    .row2-left{
+      width: 500px;
+      height: 200px;
+      border: 1px solid black;
+      float: left;
+    }
+    .row2-mid{
+      width: 500px;
+      height: 200px;
+      border: 1px solid black;
+      float: left;
+    }
+  }
+  .footer-row3{
+    width: 100%;
+    height: 200px;
+    text-align: center;
   }
 }
