--- a/public/home/css/top.css
+++ b/public/home/css/top.css
@@ -12,7 +12,7 @@ ul {
   background-color: aliceblue;
 }
 #header .header {
-  width: 1358px;
+  width: 1300px;
   height: 78px;
   margin: 0 auto;
   display: flex;
@@ -37,9 +37,8 @@ ul {
 #header .header .header-nav .list-nav li {
   width: 90px;
   height: 90px;
-  background-color: blanchedalmond;
+  background-color: aliceblue;
   text-align: center;
-  border: 1px solid green;
   cursor: pointer;
 }
 #header .header .header-nav .list-nav li p {
