--- a/public/home/css/footer.less
+++ b/public/home/css/footer.less
@@ -16,7 +16,7 @@ ul{list-style: none;}
     // align-content: space-between;
     //   两端对齐 中间留有空隙
     justify-content: space-between;
-    width: 80%;
+    width: 1200px;
     height: 220px;
     margin: 50px auto;
     background-color: yellowgreen;
@@ -142,7 +142,7 @@ ul{list-style: none;}
     }
   }
   .footer-row2{
-    width: 80%;
+    width: 1200px;
     height: 200px;
     background-color: brown;
     margin: 10px auto;
