--- a/public/home/css/article.css
+++ b/public/home/css/article.css
@@ -11,11 +11,47 @@ ul {
   background-color: #f3f3f3;
 }
 #article .article-row {
-  width: 1300px;
+  width: 100%;
   height: 578px;
   margin: 0 auto;
   text-align: center;
 }
-#article .artivle-row:nth-child(1) {
+#article .article-row .article-list-tui {
+  height: 100%;
+  border: 1px solid black;
+}
+#article .article-row .article-list-tui h2 {
+  font-size: 30px;
+  padding-top: 55px;
+  margin-bottom: 35px;
+}
+#article .article-row .article-list-tui .list-top {
+  width: 580px;
+  margin: 0 auto;
+}
+#article .article-row .article-list-tui .list-top li {
+  font-size: 14px;
+  float: left;
+  margin: 0 25px;
+}
+#article .article-row .article-list-new {
+  height: 100%;
+  border: 1px solid black;
+}
+#article .article-row .article-list-new h2 {
+  font-size: 30px;
+  padding-top: 55px;
+  margin-bottom: 35px;
+}
+#article .article-row .article-list-new .list-top {
+  width: 580px;
+  margin: 0 auto;
+}
+#article .article-row .article-list-new .list-top li {
+  font-size: 14px;
+  float: left;
+  margin: 0 25px;
+}
+#article .article-row:nth-child(2n) {
   background-color: white;
 }
