--- a/public/home/css/article.less
+++ b/public/home/css/article.less
@@ -12,13 +12,53 @@ ul{list-style: none;}
    //网页自适应居中
    
   .article-row{
-    width: 1358px;
+    width: 100%;
     height: 578px;
     margin: 0 auto;
     text-align: center;
-  
+    
+    .article-list-tui{
+      height: 100%;
+      border: 1px solid black;
+      h2{
+        font-size: 30px;
+        padding-top: 55px;
+        margin-bottom: 35px;
+      }
+
+      .list-top{
+        width: 580px;
+        margin: 0 auto;
+        li{
+          font-size: 14px;
+          float: left;
+          margin: 0 25px;
+        }
+      }
+    }
+    .article-list-new{
+      height: 100%;
+      border: 1px solid black;
+      
+      h2{
+        font-size: 30px;
+        padding-top: 55px;
+        margin-bottom: 35px;
+      }
+      .list-top{
+        width: 580px;
+        margin: 0 auto;
+        li{
+          font-size: 14px;
+          float: left;
+          margin: 0 25px;
+        }
+      }
+    }
+
   }
-  .artivle-row:nth-child(1){
-    background-color: white;
+
+   .article-row:nth-child(2n){
+     background-color: white;
    }
 }
