--- a/public/home/css/top.less
+++ b/public/home/css/top.less
@@ -1,102 +1,120 @@
 @charset "UTF-8";
-*{
-   margin: 0;
-   padding: 0;
- }
- ul{list-style: none;}
 
- //头部
- #header{
-   width: 100%;
-   height: 190px;
-   background-color: aliceblue;
+* {
+  margin: 0;
+  padding: 0;
+}
 
-   //网页自适应居中
-   .header{
-     width: 1358px;
-     height: 78px;
-     margin: 0 auto;
-    //  开启弹性盒子
-     display: flex;
-    //  两端
-     justify-content: space-between;
-     flex-wrap: wrap;
+ul {
+  list-style: none;
+}
 
-     //导航
-     .header-nav{
-       width: 100%;
-       height: 90px;
-       display: flex;
+//头部
+#header {
+  width: 100%;
+  height: 190px;
+  background-color: aliceblue;
 
-       //图片对齐
-       .logo{
-         padding-top: 15px; 
-        //  小手
-         cursor: pointer;
-        
-        
+  //网页自适应居中
+  .header {
+    width: 1200px;
+    height: 78px;
+    margin: 0 auto;
     
-        }
-        // 导航文字内容
-        .list-nav{        
-          width: 450px;
-          height: 90px;
-          display: flex;
-          background-color: #fff;  
-         
 
-        li{
+    //导航
+    .header-nav {
+      width: 100%;
+      height: 90px;
+      // display: flex;
+      //  开启弹性盒子
+      display: flex;
+      //  两端
+      justify-content: space-between;
+      flex-wrap: nowrap;
+      margin: 0 auto;
+      //图片对齐
+      .logo {
+        padding-top: 20px;
+        //  小手
+        cursor: pointer;
+
+
+
+      }
+
+      // 导航文字内容
+      .list-nav {
+        width: 450px;
+        height: 90px;
+        display: flex;
+        background-color: #fff;
+        // margin-left: 30px;
+
+        li {
           width: 90px;
           height: 90px;
           background-color: aliceblue;
           text-align: center;
+          font-size: 16px;
           // border: 1px solid green;
           cursor: pointer;
-          p{
-            font-size: 14px;
+
+          p {
+            // font-size: 14px;
             color: black;
-            margin-top: 25px;
-            
+            // margin-top: 25px;
+            line-height: 90px;
+          }
+          &:hover{
+            background-color: #31C27C;
+          }
+          &:hover p{
+           color: white;
           }
         }
 
-
-       }
-       //搜索框
-       .select{
-         width:160px ;
-         height: 25px;
-         margin-top: 25px;
-         margin-left: 10px;
-       }
-      span{
-        margin-left: 20px;
-        margin-top: 25px;
-        font-size: 14px;
-      }
-      #select{
-        width: 90px;
-        height: 30px;
-        background-color: greenyellow;
-        margin-top: 25px;
-        margin-left: 25px;
-      }
-      #select2{
-        width: 90px;
-        height: 30px;
-        background-color: white;
-        margin-top: 25px;
-        margin-left: 10px;
       }
 
-     }
-     .header-dao{
-       width: 100%;
-       height: 90px;
-       background-color: yellow;
-     }
+      .header-right {
 
-   }
+        //搜索框
+        .select {
+          width: 160px;
+          height: 25px;
+          margin-top: 30px;
+          margin-left: 10px;
+          border-radius: 5px;
+        }
 
- }
- 
+        span {
+          margin-left: 20px;
+          margin-top: 35px;
+          font-size: 16px;
+        }
+
+        #select {
+          width: 90px;
+          height: 30px;
+          background-color: greenyellow;
+          border-radius: 5px;
+          margin-top: 25px;
+          margin-left: 25px;
+        }
+
+        #select2 {
+          width: 90px;
+          height: 30px;
+          background-color: white;
+          border-radius: 5px;
+          margin-top: 25px;
+          margin-left: 10px;
+        }
+
+      }
+    }
+
+
+  }
+
+}
