--- a/public/home/css/article.less
+++ b/public/home/css/article.less
@@ -13,13 +13,14 @@ ul{list-style: none;}
    
   .article-row{
     width: 100%;
-    height: 578px;
+    // height: 578px;
     margin: 0 auto;
     text-align: center;
-    
+    box-sizing: border-box;
     .article-list-tui{
-      height: 100%;
+      // height: 100%;
       border: 1px solid black;
+      height: 578px;
       h2{
         font-size: 30px;
         padding-top: 55px;
@@ -37,7 +38,7 @@ ul{list-style: none;}
       }
     }
     .article-list-new{
-      height: 100%;
+      height: 578px;
       border: 1px solid black;
       
       h2{
@@ -55,8 +56,19 @@ ul{list-style: none;}
         }
       }
     }
-
+    .artice-list-lun{
+      height: 420px;
+      border: 1px solid black;
+      h2{
+        font-size: 30px;
+        padding-top: 55px;
+        margin-bottom: 35px;
+      }
+     
+    }
   }
+
+
 
    .article-row:nth-child(2n){
      background-color: white;
