--- a/public/home/css/footer.css
+++ b/public/home/css/footer.css
@@ -11,26 +11,33 @@ ul {
   height: 640px;
   background-color: #333333;
 }
+#footer span:hover {
+  color: #31c27c;
+}
 #footer .footer-row1 {
   display: flex;
   justify-content: space-between;
   width: 1200px;
   height: 220px;
   margin: 50px auto;
-  background-color: yellowgreen;
+  color: #999999;
+}
+#footer .footer-row1 li:hover {
+  color: #31c27c;
 }
 #footer .footer-row1 .row-left {
   width: 380px;
   height: 200px;
-  background-color: blue;
-  border: 1px solid black;
   float: left;
   font-size: 12px;
+}
+#footer .footer-row1 .row-left h3 {
+  font-size: 16px;
 }
 #footer .footer-row1 .row-left ul {
   width: 360px;
   height: 100px;
-  border: 1px solid black;
+  margin-top: 40px;
 }
 #footer .footer-row1 .row-left ul .ico_pc {
   margin: 10px auto;
@@ -69,14 +76,16 @@ ul {
 #footer .footer-row1 .row-midde {
   width: 380px;
   height: 200px;
-  border: 1px solid black;
   float: left;
   font-size: 12px;
+}
+#footer .footer-row1 .row-midde h3 {
+  font-size: 16px;
 }
 #footer .footer-row1 .row-midde ul {
   width: 360px;
   height: 100px;
-  border: 1px solid black;
+  margin-top: 40px;
 }
 #footer .footer-row1 .row-midde ul .ico_pc {
   margin: 10px auto;
@@ -115,40 +124,46 @@ ul {
 #footer .footer-row1 .row-right {
   width: 380px;
   height: 200px;
-  border: 1px solid black;
   float: left;
   font-size: 12px;
+}
+#footer .footer-row1 .row-right h3 {
+  font-size: 16px;
 }
 #footer .footer-row1 .row-right ul {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  height: 200px;
-  border: 1px solid black;
+  height: 160px;
+  margin-top: 30px;
 }
 #footer .footer-row1 .row-right ul li {
-  width: 120px;
+  width: 100px;
+  height: 40px;
+  line-height: 40px;
 }
 #footer .footer-row2 {
   width: 1200px;
   height: 200px;
-  background-color: brown;
   margin: 10px auto;
+  color: #999999;
+}
+#footer .footer-row2 span {
+  display: inline-block;
+  margin-top: 30px;
 }
 #footer .footer-row2 .row2-left {
-  width: 500px;
+  width: 400px;
   height: 200px;
-  border: 1px solid black;
   float: left;
 }
 #footer .footer-row2 .row2-mid {
-  width: 500px;
+  width: 400px;
   height: 200px;
-  border: 1px solid black;
   float: left;
 }
 #footer .footer-row3 {
+  color: #999999;
   width: 100%;
-  height: 200px;
   text-align: center;
 }
